# jax_custom_call_nested_xmap_issue

./: CMakeLists.txt  README.md  setup.py
lib/: fake_custom_call.cu  fake_custom_call.h  gpu_ops.cc  kernel_helpers.h  pybind11_kernel_helpers.h
src/fake_custom_call_ext/: __init__.py  fake_custom_call.py
src/fake_custom_call_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: delay_xmap_in_lowering.py
